2006-04-13  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	Added actual failure on lack of loading plugin.

	* src/services/EntityTime.py:
	Added jabber:iq:time handler.

	* src/services/EntityTime.py:
	* src/services/VersionTeller.py:
	Cleanup.

	* src/globals.py:
	Added jabber:iq:last.
	Added jabber:iq:time.

	* src/services/VersionTeller.py:
	Added twisted version to os string.
	Shortened python version string.

2006-04-10  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	Commented out pubsub support so I can release r180.

	* src/adhoc.py:
	* src/services/ConnectUsers.py:
	* src/services/GatewayTranslator.py:
	* src/services/IqAvatar.py:
	* src/services/SearchFactory.py:
	* src/services/VCardFactory.py:
	Updated to have proper location of sendIqError.

	* src/jabw.py:
	Updated to have proper location of sendIq.

	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	Put buddyList back as legacyList since other things depend on it.

	* src/main.py:
	Fixed bad call to onIq.

	* src/legacy/legacylist.py:
	* src/legacy/buddies.py:
	Oops, forgot to add and move.

	* src/services/VersionTeller.py:
	Fixed to have proper call to disco.

2006-04-09  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/pubsub.py:
	Added handler for storage.

2006-04-08  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/pubsub.py:
	Updated to handle pubsub and pep.

	* src/globals.py:
	Added pubsub pieces (including pep), avatar, and nick.

	* src/iq.py:
	Renamed prefhandlers to prefixhandlers.

	* src/jabw.py:
	Added JEP-0172 nickname support.

	* src/main.py:
	Fixed bug with handling of debugLevel.

	* src/legacy/icqt.py:
	Updated to properly update ssicontact list when buddy does offline.

2006-04-03  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	Fixed guess_encoding .. maybe?  Who knows....

	* src/adhoc.py:
	* src/main.py:
	Separated ad-hoc commands support.

	* src/pubsub.py:
	Started pubsub support.

	* src/main.py:
	Misc restructuring.

	* src/main.py: