@@ -1,3 +1,15 @@
+2006-04-16  Daniel Henninger  <jadestorm@nc.rr.com>
+
+	* src/tlib/oscar.py:
+	Removed utf-16be from the guess_encoding stuff... causes problems.
+
+	* src/iq.py:
+	* src/session.py:
+	Added arg to errback.
+
+	* src/adhoc.py:
+	Couple of cleanups.
+
 2006-04-13  Daniel Henninger  <jadestorm@nc.rr.com>
 
 	* src/main.py:
